# yolov5_detection_project

./: README.md  detector.py  main.py  pyproject.toml  requirements.txt
cameras/: __init__.py  base.py  realsense_camera.py  web_camera.py
datasets/: custom.yaml  prepare_dataset.py
examples/: utils.py  yolov5_ort.py
